# intervueBot

./: .gitignore  LICENSE  README.md  intervuebot_roadmap.md
backend/: API_EXAMPLES.md  Dockerfile  INTERVIEW_SEQUENCE.md  README.md  SETUP_ENV.md  env.example  main.py  pyproject.toml
backend/controllers/: document_controller.py
backend/routes/: api.py  document_routes.py
backend/scripts/: __init__.py  setup_dev.py
backend/services/: document_reader.py
backend/src/: __init__.py  main.py
backend/src/intervuebot/: __init__.py
backend/src/intervuebot/agents/: __init__.py  adaptive_interview_agent.py  evaluation_agent.py  interview_agent.py  question_generator_agent.py  resume_parser_agent.py
backend/src/intervuebot/api/: __init__.py
backend/src/intervuebot/api/v1/: router.py
backend/src/intervuebot/api/v1/endpoints/: files.py  health.py  interviews.py  uploads.py
backend/src/intervuebot/core/: __init__.py  config.py  events.py  interview_sequence.py  redis.py
backend/src/intervuebot/schemas/: file.py  interview.py
backend/src/intervuebot/services/: __init__.py  file_processor.py  file_upload_service.py  resume_analyzer.py
backend/tests/: __init__.py  test_agents.py  test_health.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  theme.ts
frontend/src/components/: FileUpload.tsx  Header.tsx
frontend/src/pages/: HomePage.tsx  InterviewPage.tsx  ReportPage.tsx
frontend/src/services/: api.ts
