[project]
name = "intervuebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "agno>=1.7.2",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "google-genai>=1.25.0",
    "pymupdf>=1.26.3",
    "pypdf>=5.8.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0"
]

[tool.setuptools]
packages = ["agents", "models", "services", "utils"]
